--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/xiaomi.css">
+    
 </head>
 <body>
-    
+    <div class="slideshow">
+        <div class="slideshow_main">
+            <img src="./img/slideshow-one.jpg" class="slideshow_img active">
+            <img src="./img/slideshow-two.webp" class="slideshow_img">
+            <div class="btn">
+                <button class="slideshow_btn"></button>
+                <button class="slideshow_btn"></button>
+            </div>
+        </div>
+    </div>
+    <script src="./js/xiaomi.js"></script>
 </body>
 </html>
