--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/xiaomi.css">
 </head>
 <body>
-    
+    <div class="footer">
+        <div class="subfooter">
+            <div class="ztl">
+                <div class="subztl"><a href=""><img src="./img/保障服务.png" alt=""><br><span>保障服务</span></a> </div>
+                <div class="subztl"><a href=""><img src="./img/企业团购.png" alt=""><br><span>企业团购</span> </a></div>
+                <div class="subztl"><a href=""><img src="./img/F码通道.png" alt=""><br><span>F码通道</span></a> </div>
+                <div class="subztl"><a href=""><img src="./img/米粉卡.png" alt=""><br><span>米粉卡</span> </a></div>
+                <div class="subztl"><a href=""><img src="./img/以旧换新.png" alt=""><br><span>以旧换新</span></a> </div>
+                <div class="subztl"><a href=""><img src="./img/话费充值.png" alt=""><br><span>话费充值</span></a> </div>
+            </div>
+            <div class="ztr">
+                <div class="ztrimg"><img src="./img/xiaomi11ultra.jpg" alt=""></div>
+                <div class="ztrimg"><img src="./img/mixfold.png" alt=""></div>
+                <div class="ztrimg"><img src="./img/redmibuds3.jpeg" alt=""></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
